@@ -1,24 +1,32 @@
 package com.oficina.common.infrastructure.rest;
 
+import com.oficina.common.domain.exception.EntidadeNaoEncontradaException;
 import jakarta.validation.ConstraintViolationException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
     private static final Logger logger = LoggerFactory.getLogger(GlobalExceptionHandler.class);
+
+    private static final String TIMESTAMP_KEY = "timestamp";
+    private static final String STATUS_KEY = "status";
+    private static final String ERROR_KEY = "error";
+    private static final String MESSAGE_KEY = "message";
+    private static final String ERRORS_KEY = "errors";
+    private static final String FIELD_KEY = "field";
 
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<Object> handleConstraintViolationException(ConstraintViolationException ex) {
@@ -26,18 +34,18 @@ public class GlobalExceptionHandler {
                 .stream()
                 .map(violation -> {
                     Map<String, String> err = new LinkedHashMap<>();
-                    err.put("field", violation.getPropertyPath().toString());
-                    err.put("message", violation.getMessage());
+                    err.put(FIELD_KEY, violation.getPropertyPath().toString());
+                    err.put(MESSAGE_KEY, violation.getMessage());
                     return err;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDateTime.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "Bad Request");
-        body.put("message", "Erro de validação nos parâmetros");
-        body.put("errors", errors);
+        body.put(TIMESTAMP_KEY, LocalDateTime.now(ZoneId.of("UTC")));
+        body.put(STATUS_KEY, HttpStatus.BAD_REQUEST.value());
+        body.put(ERROR_KEY, "Bad Request");
+        body.put(MESSAGE_KEY, "Erro de validação nos parâmetros");
+        body.put(ERRORS_KEY, errors);
 
         return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
     }
@@ -49,18 +57,18 @@ public class GlobalExceptionHandler {
                 .stream()
                 .map(error -> {
                     Map<String, String> err = new LinkedHashMap<>();
-                    err.put("field", error.getField());
-                    err.put("message", error.getDefaultMessage());
+                    err.put(FIELD_KEY, error.getField());
+                    err.put(MESSAGE_KEY, error.getDefaultMessage());
                     return err;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDateTime.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "Bad Request");
-        body.put("message", "Erro de validação nos campos informados");
-        body.put("errors", errors);
+        body.put(TIMESTAMP_KEY, LocalDateTime.now(ZoneId.of("UTC")));
+        body.put(STATUS_KEY, HttpStatus.BAD_REQUEST.value());
+        body.put(ERROR_KEY, "Bad Request");
+        body.put(MESSAGE_KEY, "Erro de validação nos campos informados");
+        body.put(ERRORS_KEY, errors);
 
         return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
     }
@@ -73,7 +81,7 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(IllegalStateException.class)
     public ResponseEntity<Object> handleIllegalStateException(IllegalStateException ex) {
         // 422 Unprocessable Entity é comum para estados de negócio inválidos
-        return buildResponse(HttpStatus.UNPROCESSABLE_ENTITY, ex.getMessage());
+        return buildResponse(HttpStatus.UNPROCESSABLE_CONTENT, ex.getMessage());
     }
 
     @ExceptionHandler(ResponseStatusException.class)
@@ -81,22 +89,23 @@ public class GlobalExceptionHandler {
         return buildResponse(HttpStatus.valueOf(ex.getStatusCode().value()), ex.getReason());
     }
 
+    @ExceptionHandler(EntidadeNaoEncontradaException.class)
+    public ResponseEntity<Object> handleEntidadeNaoEncontradaException(EntidadeNaoEncontradaException ex) {
+        return buildResponse(HttpStatus.NOT_FOUND, ex.getMessage());
+    }
+
     @ExceptionHandler(RuntimeException.class)
     public ResponseEntity<Object> handleRuntimeException(RuntimeException ex) {
         logger.error("Erro inesperado no servidor: ", ex);
-        // Se a mensagem contiver "não encontrado", podemos retornar 404
-        if (ex.getMessage() != null && ex.getMessage().toLowerCase().contains("não encontrado")) {
-            return buildResponse(HttpStatus.NOT_FOUND, ex.getMessage());
-        }
         return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Erro interno no servidor");
     }
 
     private ResponseEntity<Object> buildResponse(HttpStatus status, String message) {
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDateTime.now());
-        body.put("status", status.value());
-        body.put("error", status.getReasonPhrase());
-        body.put("message", message);
+        body.put(TIMESTAMP_KEY, LocalDateTime.now(ZoneId.of("UTC")));
+        body.put(STATUS_KEY, status.value());
+        body.put(ERROR_KEY, status.getReasonPhrase());
+        body.put(MESSAGE_KEY, message);
         return new ResponseEntity<>(body, status);
     }
 }
