@@ -8,7 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class ServicoJpaAdapter implements ServicoRepositoryPort {
@@ -33,8 +32,7 @@ public class ServicoJpaAdapter implements ServicoRepositoryPort {
 
     @Override
     public List<Servico> listarServicos() {
-        List<Servico> servicos = repository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
-        return servicos;
+        return repository.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
